# git-project

./: .gitproject  Cargo.toml  README.md
src/: main.rs
src/commands/: mod.rs
src/commands/current/: mod.rs
src/commands/hook/: commit_msg.rs  mod.rs  post_commit.rs  pre_commit.rs  prepare_commit_msg.rs
src/commands/hook/commit_msg/: change_column.rs  change_tags.rs  common.rs  mod.rs
src/commands/hook/prepare_commit_msg/: mod.rs
src/commands/hooks/: mod.rs
src/commands/init/: mod.rs
src/commands/open/: mod.rs
src/commands/open/state/: help.rs  mod.rs
src/commands/open/state/board/: board.rs  column.rs  mod.rs  nav.rs  task.rs
src/commands/open/state/dialog/: task.rs
src/commands/open/state/form/: column.rs  mod.rs  project.rs  task.rs
src/model/: column.rs  git_project.rs  id.rs  mod.rs  project.rs  task.rs  task_id.rs
