[package]
authors = ["Cameron Eldridge <cameldridge@gmail.com>"]
edition = "2018"
name = "git-project"
version = "0.1.0"

[dependencies]
git2 = "0.10.1"
structopt = { version = "0.3.2", features = ["paw"] }
paw = "1.0.0"
toml = "0.5.3"
indoc = "0.3.4"
serde = { version = "1.0.101", features = ["derive"] }
cursive = { version = "0.13.0", features = ["pancurses-backend"], default-features = false }
